--- a/assignment.css
+++ b/assignment.css
@@ -29,6 +29,7 @@
     height:350px ;
     border: 1px solid black;
     margin-right: auto;
+    padding: 5px auto;
    margin-top:-372px ;
     float: right;
 }
@@ -103,4 +104,13 @@
         text-decoration: none;
         
         margin-top:10px;
+    }
+    .a{
+        width: 1350px;
+        height: 400px;
+        border: 1px solid black;
+        margin-top: 5px;
+    }
+    .set{
+        background-color: rgba(rgba(72, 255, 0, 0.856), green, blue, alpha);
     }
